--- a/css/sports.css
+++ b/css/sports.css
@@ -450,7 +450,7 @@ body {
     margin: 0;
     font-weight: normal; }
   #sidebar #sidebar-inner {
-    margin: 100px 20px 0px 20px;
+    margin: 180px 20px 0px 20px;
     color: #9b9b9b;
     font-weight: normal;
     line-height: 10pt; }
@@ -459,38 +459,52 @@ body {
       #sidebar #sidebar-inner #live #game-2 {
         border-bottom: 2px solid #b4b4b4;
         margin-top: 10px; }
+        #sidebar #sidebar-inner #live #game-2 .scores {
+          top: 293px; }
       #sidebar #sidebar-inner #live .game {
         border-bottom: 1px solid #9b9b9b; }
         #sidebar #sidebar-inner #live .game .teams {
-          display: inline-block; }
-          #sidebar #sidebar-inner #live .game .teams .team .team-logo {
-            width: 20px;
-            height: 20px;
-            display: inline-block;
-            margin: 4px 0px 0px 0px;
-            position: absolute; }
-          #sidebar #sidebar-inner #live .game .teams .team #ravens-logo {
-            background: url("../img/teams/logos/ravens.png") center;
-            background-size: cover;
-            background-repeat: no-repeat; }
-          #sidebar #sidebar-inner #live .game .teams .team #cardinals-logo {
-            background: url("../img/teams/logos/cardinals.png") center;
-            background-size: cover;
-            background-repeat: no-repeat; }
-          #sidebar #sidebar-inner #live .game .teams .team #vikings-logo {
-            background: url("../img/teams/logos/vikings.png") center;
-            background-size: cover;
-            background-repeat: no-repeat; }
-          #sidebar #sidebar-inner #live .game .teams .team #patriots-logo {
-            background: url("../img/teams/logos/patriots.png") center;
-            background-size: cover;
-            background-repeat: no-repeat; }
+          display: inline-block;
+          width: 100%; }
+          #sidebar #sidebar-inner #live .game .teams a {
+            text-decoration: none;
+            color: #9b9b9b; }
+          #sidebar #sidebar-inner #live .game .teams .team {
+            width: 97%;
+            padding-left: 3%; }
+            #sidebar #sidebar-inner #live .game .teams .team:hover {
+              cursor: pointer;
+              background: #fa4b2a;
+              color: white; }
+            #sidebar #sidebar-inner #live .game .teams .team .team-logo {
+              width: 20px;
+              height: 20px;
+              display: inline-block;
+              margin: 4px 0px 0px 0px;
+              position: absolute; }
+            #sidebar #sidebar-inner #live .game .teams .team #ravens-logo {
+              background: url("../img/teams/logos/ravens.png") center;
+              background-size: cover;
+              background-repeat: no-repeat; }
+            #sidebar #sidebar-inner #live .game .teams .team #cardinals-logo {
+              background: url("../img/teams/logos/cardinals.png") center;
+              background-size: cover;
+              background-repeat: no-repeat; }
+            #sidebar #sidebar-inner #live .game .teams .team #vikings-logo {
+              background: url("../img/teams/logos/vikings.png") center;
+              background-size: cover;
+              background-repeat: no-repeat; }
+            #sidebar #sidebar-inner #live .game .teams .team #patriots-logo {
+              background: url("../img/teams/logos/patriots.png") center;
+              background-size: cover;
+              background-repeat: no-repeat; }
         #sidebar #sidebar-inner #live .game .scores {
           padding-top: 4;
           display: inline-block;
           position: absolute;
           right: 40px;
-          text-align: right; }
+          text-align: right;
+          top: 224px; }
     #sidebar #sidebar-inner #headlines {
       margin-top: 25px;
       border-bottom: 2px solid #b4b4b4;
@@ -534,7 +548,7 @@ body {
       display: inline-block; }
   #stream #stream-content {
     list-style-type: none;
-    margin-top: 139px;
+    margin-top: 175px;
     width: 800px;
     margin-left: auto;
     margin-right: auto; }
@@ -707,3 +721,70 @@ body {
       #stream #stream-content .landscape .caption {
         top: 35%;
         padding-left: 20px; }
+
+.menu-dropdown {
+  height: 32.5px;
+  border-bottom: 1px solid #e8e8e8; }
+
+.logo-dropdown li {
+  height: 33px !important;
+  font-size: 17pt !important; }
+  .logo-dropdown li .dropdown-sport-logo {
+    margin-top: 7px !important; }
+.logo-dropdown .view-more-left {
+  height: 33px !important;
+  width: 33px !important;
+  font-size: 20pt !important; }
+.logo-dropdown .view-more-right {
+  height: 33px !important;
+  width: 33px !important;
+  font-size: 20pt !important; }
+.logo-dropdown #dropdown-items #dropdown-football {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-bottom: 0px solid #fa4b2a;
+  position: absolute;
+  margin-left: 34px !important;
+  width: 155px;
+  color: white;
+  background: #fa4b2a; }
+  .logo-dropdown #dropdown-items #dropdown-football:hover {
+    color: white; }
+  .logo-dropdown #dropdown-items #dropdown-football .dropdown-sport-logo {
+    margin-top: 8px !important;
+    margin-left: -45px; }
+  .logo-dropdown #dropdown-items #dropdown-football .dropdown-sport-title {
+    margin-top: 4px;
+    margin-left: -19px; }
+.logo-dropdown #dropdown-items #dropdown-swimming {
+  padding-right: 20; }
+.logo-dropdown #dropdown-items .small {
+  width: 36px;
+  opacity: .5; }
+  .logo-dropdown #dropdown-items .small:hover {
+    opacity: 1; }
+.logo-dropdown #dropdown-items .first {
+  margin-left: 190px; }
+
+.sport-submenu {
+  width: 100%;
+  height: 32px;
+  position: fixed;
+  top: 114px;
+  overflow-x: scroll;
+  white-space: nowrap; }
+  .sport-submenu .subheader {
+    -webkit-transition: all 0.25s ease;
+    -moz-transition: all 0.25s ease;
+    -ms-transition: all 0.25s ease;
+    -o-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+    display: inline-block;
+    font-family: BariolThin;
+    color: #6d6e71;
+    padding: 10px 4% 0px 0px; }
+    .sport-submenu .subheader:hover {
+      color: #fa4b2a; }
+  .sport-submenu .first {
+    margin-left: 35px; }
