--- a/css/sports.scss
+++ b/css/sports.scss
@@ -38,7 +38,7 @@ body {
 	}
 
 	#sidebar-inner {
-		margin: 100px 20px 0px 20px; 
+		margin: 180px 20px 0px 20px; 
 		color: $lightgray;
 		font-weight: normal;
 		line-height: 10pt;
@@ -49,6 +49,10 @@ body {
 			#game-2 {
 				border-bottom: 2px solid lighten($lightgray, 10%);
 				margin-top: 10px;
+
+				.scores {
+					top: 293px;
+				}
 			}
 
 			.game {
@@ -56,8 +60,22 @@ body {
 
 				.teams {
 					display: inline-block;
+					width: 100%;
+
+					a {
+						text-decoration: none;
+						color: $lightgray;
+					}
 
 					.team {
+						width: 97%;
+						padding-left: 3%;
+
+						&:hover {
+							cursor: pointer;
+							background: $orange;
+							color: white;
+						}
 
 						.team-logo {
 							width: 20px;
@@ -101,6 +119,7 @@ body {
 					position: absolute;
 					right: 40px;
 					text-align: right;
+					top: 224px;
 				}
 			}
 		}
@@ -169,7 +188,7 @@ body {
 
 	#stream-content {
 		list-style-type: none;
-		margin-top: 139px;
+		margin-top: 175px;
 		width: 800px;
 		margin-left: auto;
 		margin-right: auto;
@@ -374,6 +393,111 @@ body {
 
 		}
 
+	}
+
+}
+
+//dropdown overwrite
+
+.menu-dropdown {
+	height: 32.5px;
+	border-bottom: 1px solid lighten($lightgray, 30%);
+}
+
+.logo-dropdown {
+
+	li {
+		height: 33px !important;
+		font-size: 17pt !important;
+
+		.dropdown-sport-logo {
+			margin-top: 7px !important;
+		}
+
+	}
+
+	.view-more-left {
+		height: 33px !important;
+		width: 33px !important;
+		font-size: 20pt !important;
+	}
+
+	.view-more-right {
+		height: 33px !important;
+		width: 33px !important;
+		font-size: 20pt !important;
+	}
+
+	#dropdown-items {
+
+		#dropdown-football {
+			@include box-sizing(border-box);
+			border-bottom: 0px solid $orange;
+			position: absolute;
+			margin-left: 34px !important;
+			width: 155px;
+			color: white;
+			background: $orange;
+
+			&:hover {
+				color: white;
+			}
+
+			.dropdown-sport-logo {
+				margin-top: 8px !important;
+				margin-left: -45px;
+			}
+
+			.dropdown-sport-title {
+				margin-top: 4px;
+				margin-left: -19px;
+			}
+
+		}
+
+		#dropdown-swimming {
+			padding-right: 20;
+		}
+
+		.small {
+			width: 36px;
+			opacity: .5;
+
+			&:hover {
+				opacity: 1;
+			}
+		}
+
+		.first {
+			margin-left: 190px;
+		}
+
+	}
+
+}
+
+.sport-submenu {
+	width: 100%;
+	height: 32px;
+	position: fixed;
+	top: 114px;
+	overflow-x: scroll;
+	white-space: nowrap;
+
+	.subheader {
+		@include transition(all .25s ease);
+		display:inline-block;
+		font-family:BariolThin;
+		color: $darkgray;
+		padding: 10px 4% 0px 0px;
+
+		&:hover {
+			color: $orange;
+		}
+	}
+
+	.first {
+		margin-left: 35px;
 	}
 
 }
