--- a/css/global.scss
+++ b/css/global.scss
@@ -173,6 +173,7 @@ body {
     font-weight: normal;
     margin: 0;
     min-width: 730px;
+    position: relative;
 }
 
 .visible {
@@ -204,7 +205,7 @@ body {
     background: rgba(255, 255, 255, 0.97);
     position: fixed;
     top: 0;
-    z-index: 1000;
+    z-index: 2000;
     border-bottom: 1px solid lighten($lightgray, 30%);
     @include box-shadow(0px 1px 4px rgba(0,0,0,.2));
     overflow: hidden;
@@ -523,14 +524,6 @@ body {
 }
 
 
-.footer {
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    background: white;
-}
-
 //text colors
 
 .text-white {
@@ -650,4 +643,45 @@ body {
     background: url('../img/search/swimming.png') center;
     background-size: cover;
     margin-right: 0;
+}
+
+
+//footer
+#footer {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background: black;
+    bottom: 0;
+    z-index: 10000;
+    float: bottom;
+
+    .footer-logo-container {
+        display: none;
+        width: 175px;
+        height: 24px;
+        overflow: hidden;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 15px;
+        position: relative;
+
+        .footer-logo {
+                @include transition(top .15s ease);
+                width: 125px;
+                height: 48px;
+                background: url('../img/logo.png');
+                background-size: cover;
+                background-repeat: no-repeat;
+                position: absolute;
+                top: 0;
+
+                &:hover {
+                    cursor: pointer;
+                    top: -24px;
+                }
+
+        }
+    }
+
 }
