--- a/css/index.scss
+++ b/css/index.scss
@@ -158,8 +158,10 @@ body {
 		top: 80%;
 		width: 100%;
 		z-index: 2;
+		padding-bottom: 50px;
 
 		#search {
+			display: none;
 			width: 100%;
 			height: 50px;
 			background: rgba(255, 255, 255, 1);
@@ -244,6 +246,7 @@ body {
 		#stories {
 			width: 100%;
 			background: #000;
+			padding-top: 50px;
 
 			#story-grid {
 				max-width: 1217px;
