--- a/css/player.css
+++ b/css/player.css
@@ -30,7 +30,8 @@ body {
   font-family: 'Bariol';
   font-weight: normal;
   margin: 0;
-  min-width: 730px; }
+  min-width: 730px;
+  position: relative; }
 
 .visible {
   display: block; }
@@ -58,7 +59,7 @@ body {
   background: rgba(255, 255, 255, 0.97);
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: 2000;
   border-bottom: 1px solid #e8e8e8;
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
@@ -339,13 +340,6 @@ body {
   height: 75px;
   position: relative; }
 
-.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: white; }
-
 .text-white {
   color: white; }
 
@@ -431,6 +425,40 @@ body {
   background: url("../img/search/swimming.png") center;
   background-size: cover;
   margin-right: 0; }
+
+#footer {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  background: black;
+  bottom: 0;
+  z-index: 10000;
+  float: bottom; }
+  #footer .footer-logo-container {
+    display: none;
+    width: 175px;
+    height: 24px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    position: relative; }
+    #footer .footer-logo-container .footer-logo {
+      -webkit-transition: top 0.15s ease;
+      -moz-transition: top 0.15s ease;
+      -ms-transition: top 0.15s ease;
+      -o-transition: top 0.15s ease;
+      transition: top 0.15s ease;
+      width: 125px;
+      height: 48px;
+      background: url("../img/logo.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 0; }
+      #footer .footer-logo-container .footer-logo:hover {
+        cursor: pointer;
+        top: -24px; }
 
 .cover {
   width: 100%;
