--- a/css/sports.css
+++ b/css/sports.css
@@ -30,7 +30,8 @@ body {
   font-family: 'Bariol';
   font-weight: normal;
   margin: 0;
-  min-width: 730px; }
+  min-width: 730px;
+  position: relative; }
 
 .visible {
   display: block; }
@@ -58,7 +59,7 @@ body {
   background: rgba(255, 255, 255, 0.97);
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: 2000;
   border-bottom: 1px solid #e8e8e8;
   -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
@@ -339,13 +340,6 @@ body {
   height: 75px;
   position: relative; }
 
-.footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: white; }
-
 .text-white {
   color: white; }
 
@@ -432,18 +426,102 @@ body {
   background-size: cover;
   margin-right: 0; }
 
+#footer {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  background: black;
+  bottom: 0;
+  z-index: 10000;
+  float: bottom; }
+  #footer .footer-logo-container {
+    display: none;
+    width: 175px;
+    height: 24px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    position: relative; }
+    #footer .footer-logo-container .footer-logo {
+      -webkit-transition: top 0.15s ease;
+      -moz-transition: top 0.15s ease;
+      -ms-transition: top 0.15s ease;
+      -o-transition: top 0.15s ease;
+      transition: top 0.15s ease;
+      width: 125px;
+      height: 48px;
+      background: url("../img/logo.png");
+      background-size: cover;
+      background-repeat: no-repeat;
+      position: absolute;
+      top: 0; }
+      #footer .footer-logo-container .footer-logo:hover {
+        cursor: pointer;
+        top: -24px; }
+
 body {
   background: #ffffff;
   min-width: 1030px; }
 
+.sidebar-expander {
+  -webkit-transition: right 0.25s ease;
+  -moz-transition: right 0.25s ease;
+  -ms-transition: right 0.25s ease;
+  -o-transition: right 0.25s ease;
+  transition: right 0.25s ease;
+  width: 100px;
+  height: 100px;
+  position: fixed;
+  top: 180px;
+  background: #fa4b2a;
+  z-index: 999;
+  right: 0;
+  border: 1px solid #c1c1c1;
+  border-right: 0px;
+  color: white;
+  -moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2); }
+  @media only screen and (min-width: 1066px) {
+    .sidebar-expander {
+      right: -101 !important; } }
+  .sidebar-expander:hover {
+    cursor: pointer;
+    background: #d32605; }
+  .sidebar-expander.expanded {
+    right: 25%; }
+  .sidebar-expander .expander-icon {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -37; }
+  .sidebar-expander h1 {
+    font-family: BariolThin;
+    font-size: 100pt;
+    line-height: 25px;
+    text-align: center;
+    margin: 0; }
+
 #sidebar {
+  -webkit-transition: right 0.25s ease;
+  -moz-transition: right 0.25s ease;
+  -ms-transition: right 0.25s ease;
+  -o-transition: right 0.25s ease;
+  transition: right 0.25s ease;
   position: fixed;
   height: 100%;
   width: 25%;
   background: #2c2d2e;
-  right: 0;
+  right: -25%;
   border-left: 1px solid #9b9b9b;
-  overflow-y: scroll; }
+  overflow-y: scroll;
+  z-index: 1000; }
+  #sidebar.visible {
+    right: 0; }
+  @media only screen and (min-width: 1066px) {
+    #sidebar {
+      right: 0; } }
   #sidebar h1 {
     font-size: 17pt;
     color: #b4b4b4;
