--- a/css/sports.scss
+++ b/css/sports.scss
@@ -5,14 +5,67 @@ body {
 	min-width: 1030px;
 }
 
+.sidebar-expander {
+	@include transition(right .25s ease);
+	width: 100px;
+	height: 100px;
+	position: fixed;
+	top: 180px;
+	background: $orange;
+	z-index: 999;
+	right: 0;
+	border: 1px solid lighten($lightgray, 15%);
+	border-right: 0px;
+	color: white;
+    @include box-shadow(0px 1px 4px rgba(0,0,0,.2));
+
+    @media only screen and (min-width : 1066px) {
+        right: -101 !important;
+    }
+
+    &:hover {
+    	cursor: pointer;
+    	background: darken($orange, 15%);
+    }
+
+    &.expanded {
+    	right: 25%;
+    }
+
+    .expander-icon {
+    	position: absolute;
+    	width: 100%;
+    	height:100%;
+    	top: -37;
+    }
+
+    h1 {
+    	font-family: BariolThin;
+    	font-size: 100pt;
+    	line-height: 25px;
+    	text-align: center;
+    	margin: 0;
+    }
+}
+
 #sidebar {
+	@include transition(right .25s ease);
 	position: fixed;
 	height: 100%;
 	width: 25%;
 	background: darken($darkergray, 5%);
-	right: 0;
+	right: -25%;
 	border-left: 1px solid $lightgray;
 	overflow-y: scroll;
+	z-index: 1000;
+
+	&.visible {
+		right: 0;
+	}
+
+	@media only screen and (min-width : 1066px) {
+        right: 0;
+    }
 
 	h1 {
 		font-size: 17pt;
